--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,27 +1,13 @@
-[package]
-name = "rdm"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
-clap = { version = "4.5.58", features = ["derive"] }
-futures = "0.3.31"
-indicatif = "0.18.3"
-tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time", "fs", "io-util"] }
-serde = { version = "1.0.228", features = ["derive"] }
-thiserror = "2.0.18"
-reqwest = { version = "0.13.2", features = ["stream"] }
-base64 = "0.22.1"
-tokio-util = "0.7.18"
-uuid = { version = "1.21.0", features = ["v4"] }
-async-trait = "0.1.89"
+[workspace]
+members = [
+    "rdm_core",
+    "rdm_server",
+    "rdm_cli",
+]
+resolver = "2"
 
 [profile.release]
 opt-level = 3
 lto = true
 codegen-units = 1
 strip = true
-
-[dev-dependencies]
-wiremock = "0.6"
-tempfile = "3"
