--- a/rdm_server/Cargo.toml
+++ b/rdm_server/Cargo.toml
@@ -15,4 +15,5 @@ log         = "0.4.29"
 env_logger  = "0.11.9"
 tokio       = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net"] }
 tower       = "0.5.3"
+tower-http  = { version = "0.6", features = ["cors"] }
 axum        = "0.8.8"
