--- a/rdm_server/Cargo.toml
+++ b/rdm_server/Cargo.toml
@@ -17,3 +17,4 @@ tokio       = { version = "1.49.0", features = ["rt-multi-thread", "macros", "ne
 tower       = "0.5.3"
 tower-http  = { version = "0.6", features = ["cors"] }
 axum        = "0.8.8"
+dirs-next   = "2.0"
