--- a/rdm_server/Cargo.toml
+++ b/rdm_server/Cargo.toml
@@ -13,8 +13,11 @@ serde       = { version = "1.0.228", features = ["derive"] }
 serde_json  = "1.0"
 log         = "0.4.29"
 env_logger  = "0.11.9"
-tokio       = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net"] }
+tokio       = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net", "time"] }
 tower       = "0.5.3"
 tower-http  = { version = "0.6", features = ["cors"] }
 axum        = "0.8.8"
-dirs-next   = "2.0"
+dirs-next      = "2.0"
+tokio-stream   = "0.1"
+async-stream   = "0.3"
+futures        = "0.3"
