refactor observer pattern for the download progressbar

--- a/rdm_cli/Cargo.toml
+++ b/rdm_cli/Cargo.toml
@@ -12,3 +12,5 @@ rdm_core    = { path = "../rdm_core" }
 clap        = { version = "4.5.58", features = ["derive"] }
 tokio       = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
 env_logger  = "0.11.9"
+indicatif   = "0.17"
+async-trait = "0.1.89"
