--- a/rdm_ui/Cargo.toml
+++ b/rdm_ui/Cargo.toml
@@ -8,7 +8,7 @@ name = "rdm_ui"
 path = "src/main.rs"
 
 [dependencies]
-dioxus          = { version = "0.7.3", features = ["desktop"] }
+dioxus          = { version = "0.7.3" }
 serde           = { version = "1.0", features = ["derive"] }
 serde_json      = "1.0"
 tokio           = { version = "1", features = ["rt-multi-thread", "macros"] }
@@ -18,3 +18,9 @@ futures         = "0.3"
 log             = "0.4"
 env_logger      = "0.11"
 dirs            = "6.0.0"
+
+[features]
+default = ["desktop"]
+web = ["dioxus/web"]
+desktop = ["dioxus/desktop"]
+mobile = ["dioxus/mobile"]
